--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
 			<div class="colorlib-footer">
 				<p><small>&copy; <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart" aria-hidden="true"></i> by Yanaranop.Pro
+Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | by Yanaranop.Nau
 				<ul>
 					<li><a href="#"><i class="icon-facebook2"></i></a></li>
 					<li><a href="#"><i class="icon-twitter2"></i></a></li>
@@ -102,7 +102,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 					   					<div class="desc">
 						   					<h1>Hi! <br>I'm Mike</h1>
 						   					<h2>Do you want to know me?</a></h2>
-												<p><a href="https://drive.google.com/file/d/1rwYIiAXdK-AJl-ClnV1FxmUQEv2RPkjN/view?usp=sharing" class="btn btn-primary btn-learn">Download CV <i class="icon-download4"></i></a></p>
+												<p><a href="https://drive.google.com/file/d/1XnZ4N_lTrd5TkR6oVGmC22TmnYFK_qVx/view?usp=sharing" class="btn btn-primary btn-learn">Download CV <i class="icon-download4"></i></a></p>
 											</div>
 					   				</div>
 					   			</div>
@@ -118,7 +118,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 					   					<div class="desc">
 						   					<h1>I am <br>a Web Developer</h1>
 												<h2>Let's study about me.</h2>
-												<p><a href="https://drive.google.com/file/d/1rwYIiAXdK-AJl-ClnV1FxmUQEv2RPkjN/view?usp=sharing" class="btn btn-primary btn-learn">View Portfolio <i class="icon-briefcase3"></i></a></p>
+												<p><a href="https://drive.google.com/file/d/1XnZ4N_lTrd5TkR6oVGmC22TmnYFK_qVx/view?usp=sharing" class="btn btn-primary btn-learn">View Portfolio <i class="icon-briefcase3"></i></a></p>
 											</div>
 					   				</div>
 					   			</div>
@@ -138,8 +138,8 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 									<div class="about-desc">
 										<span class="heading-meta">About Us</span>
 										<h2 class="colorlib-heading">Who Am I?</h2>
-										<p><strong>Hi I'm Jackson Ford</strong> On her way she met a copy. The copy warned the Little Blind Text, that where it came from it would have been rewritten a thousand times and everything that was left from its origin would be the word "and" and the Little Blind Text should turn around and return to its own, safe country.</p>
-										<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
+										<p><strong>Hi I'm Yanaranop Naulrahaeng</strong> I worked on the website development. I love the programming because of it's challenge. There are many stories about me to tell you.</p>
+										<p>I used to work at a company revelsoft as a web developer. I got a job for Develop a website for a somboon printing company and Website development ERP System used in organizations. My skills as React, javascript, php, asp.net, HTML5, CSS</p>
 									</div>
 								</div>
 							</div>
@@ -148,32 +148,36 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 									<div class="services color-1">
 										<span class="icon2"><i class="icon-bulb"></i></span>
 										<h3>Graphic Design</h3>
+										<h4 style="position: absolute; padding-left: 25%;">50%</h4>
 									</div>
 								</div>
 								<div class="col-md-3 animate-box" data-animate-effect="fadeInRight">
 									<div class="services color-2">
 										<span class="icon2"><i class="icon-globe-outline"></i></span>
-										<h3>Web Design</h3>
+										<h3>Web Application</h3>
+										<h4 style="position: absolute; padding-left: 25%; padding-bottom: 100%;">100%</h4>
 									</div>
 								</div>
 								<div class="col-md-3 animate-box" data-animate-effect="fadeInTop">
 									<div class="services color-3">
 										<span class="icon2"><i class="icon-data"></i></span>
 										<h3>Software</h3>
+										<h4 style="position: absolute; padding-left: 25%;">75%</h4>
 									</div>
 								</div>
 								<div class="col-md-3 animate-box" data-animate-effect="fadeInBottom">
 									<div class="services color-4">
 										<span class="icon2"><i class="icon-phone3"></i></span>
 										<h3>Application</h3>
+										<h4 style="position: absolute; padding-left: 25%;">20%</h4>
 									</div>
 								</div>
 							</div>
 							<div class="row">
 								<div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
 									<div class="hire">
-										<h2>I am happy to know you <br>that 300+ projects done sucessfully!</h2>
-										<a href="#" class="btn-hire">Hire me</a>
+										<h2>I am happy to know you <br>that 6+ projects done sucessfully!</h2>
+										<a href="#" data-nav-section="contact" class="btn-hire">Hire me</a>
 									</div>
 								</div>
 							</div>
