Changs Service and sent email

--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 								</span>
 								<div class="desc">
 									<h3>Innovative Ideas</h3>
-									<p>Separated they live in Bookmarksgrove right at the coast of the Semantics</p>
+									<p>Can design the website with modern tools such as adobe photoshop, adobe illustrator more</p>
 								</div>
 							</div>
 						</div>
@@ -224,7 +224,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 								</span>
 								<div class="desc">
 									<h3>Software</h3>
-									<p>Separated they live in Bookmarksgrove right at the coast of the Semantics</p>
+									<p>Develop software in the form of windows applications on asp.net technology</p>
 								</div>
 							</div>
 						</div>
@@ -234,8 +234,8 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 									<i class="icon-phone3"></i>
 								</span>
 								<div class="desc">
-									<h3>Application</h3>
-									<p>Separated they live in Bookmarksgrove right at the coast of the Semantics</p>
+									<h3>Web Application</h3>
+									<p>Develop web applications with job appropriate technologies such as react, javascript, php, html5, C#, css3 more</p>
 								</div>
 							</div>
 						</div>
@@ -246,7 +246,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 								</span>
 								<div class="desc">
 									<h3>Graphic Design</h3>
-									<p>Separated they live in Bookmarksgrove right at the coast of the Semantics</p>
+									<p>Can design products with modern tools like adobe photoshop, adobe illustrator</p>
 								</div>
 							</div>
 						</div>
@@ -256,8 +256,8 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 									<i class="icon-data"></i>
 								</span>
 								<div class="desc">
-									<h3>Software</h3>
-									<p>Separated they live in Bookmarksgrove right at the coast of the Semantics</p>
+									<h3>Hardware</h3>
+									<p>Experience in assembling rig bitcoins</p>
 								</div>
 							</div>
 						</div>
@@ -267,8 +267,8 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 									<i class="icon-phone3"></i>
 								</span>
 								<div class="desc">
-									<h3>Application</h3>
-									<p>Separated they live in Bookmarksgrove right at the coast of the Semantics</p>
+									<h3>Mobile Application</h3>
+									<p>Develop applications on mobile phones with Android Studio</p>
 								</div>
 							</div>
 						</div>
@@ -843,7 +843,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 									<i class="icon-globe-outline"></i>
 								</div>
 								<div class="colorlib-text">
-									<p><a href="#">Yanaranop2540mike@gmail.com</a></p>
+									<p><a href="mailto:yanaranop2540mike@gmail.com?subject=Hi, thanks for contact me.&body=Please send me a information thank you! ">Yanaranop2540mike@gmail.com</a></p>
 								</div>
 							</div>
 
