Chaenges Share and Work 2

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<title>About Me</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="" />
-	<meta name="keywords" content="" />
+	<meta name="keywords" content="About Me" />
 	<meta name="author" content="" />
 
   <!-- Facebook and Twitter integration -->
@@ -561,8 +561,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 					<div class="row">
 						<!-- fuction facebook share -->
 						<div id="fb-root"></div>
-						<script async defer crossorigin="anonymous" src="https://connect.facebook.net/th_TH/sdk.js#xfbml=1&version=v8.0&appId=3091116037568783&autoLogAppEvents=1" nonce="9Oh8pusv"></script>
-						
+						<script async defer crossorigin="anonymous" src="https://connect.facebook.net/th_TH/sdk.js#xfbml=1&version=v8.0&appId=3091116037568783&autoLogAppEvents=1" nonce="kfBJHONM"></script>
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
 							<div class="project" style="background-image: url(images/img-1.jpg);">
 								<div class="desc">
@@ -571,7 +570,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 										<span>Website</span>
 										<p class="icon">
 											<span><a target="_blank" 
-													 href="https://www.facebook.com/sharer/sharer.php?u=https://mild2540mike.github.io/yanaranop.github.io/" 
+													 href="http://www.facebook.com/sharer.php?s= 100&amp;p[title]=yanaranop.mike&amp;p[url]=https://mild2540mike.github.io/yanaranop.github.io/index.html&amp;p[images][0]=" 
 													 class="fb-xfbml-parse-ignore" 
 													 data-href="https://mild2540mike.github.io/yanaranop.github.io/" 
 													 data-layout="button_count" 
@@ -598,11 +597,11 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 							<div class="project" style="background-image: url(images/img-2.jpg);">
 								<div class="desc">
 									<div class="con">
-										<h3><a href="work.html">Work 02</a></h3>
-										<span>Animation</span>
+										<h3><a href="#">Mitraphap Printing</a></h3>
+										<span>Website</span>
 										<p class="icon">
 											<span><a target="_blank" 
-												href="https://www.facebook.com/sharer/sharer.php?u=https://mild2540mike.github.io/yanaranop.github.io/" 
+												href="http://www.facebook.com/sharer.php?s= 100&amp;p[title]=yanaranop.mike&amp;p[url]=https://mild2540mike.github.io/yanaranop.github.io/index.html&amp;p[images][0]=" 
 												class="fb-xfbml-parse-ignore" 
 												data-href="https://mild2540mike.github.io/yanaranop.github.io/" 
 												data-layout="button_count" 
@@ -629,11 +628,11 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 							<div class="project" style="background-image: url(images/img-3.jpg);">
 								<div class="desc">
 									<div class="con">
-										<h3><a href="work.html">Work 03</a></h3>
+										<h3><a href="#">Work 03</a></h3>
 										<span>Illustration</span>
 										<p class="icon">
 											<span><a target="_blank" 
-												href="https://www.facebook.com/sharer/sharer.php?u=https://mild2540mike.github.io/yanaranop.github.io/" 
+												href="http://www.facebook.com/sharer.php?s= 100&amp;p[title]=yanaranop.mike&amp;p[url]=https://mild2540mike.github.io/yanaranop.github.io/index.html&amp;p[images][0]=" 
 												class="fb-xfbml-parse-ignore" 
 												data-href="https://mild2540mike.github.io/yanaranop.github.io/" 
 												data-layout="button_count" 
@@ -660,11 +659,11 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 							<div class="project" style="background-image: url(images/img-4.jpg);">
 								<div class="desc">
 									<div class="con">
-										<h3><a href="work.html">Work 04</a></h3>
+										<h3><a href="#">Work 04</a></h3>
 										<span>Application</span>
 										<p class="icon">
 											<span><a target="_blank" 
-												href="https://www.facebook.com/sharer/sharer.php?u=https://mild2540mike.github.io/yanaranop.github.io/" 
+												href="http://www.facebook.com/sharer.php?s= 100&amp;p[title]=yanaranop.mike&amp;p[url]=https://mild2540mike.github.io/yanaranop.github.io/index.html&amp;p[images][0]=" 
 												class="fb-xfbml-parse-ignore" 
 												data-href="https://mild2540mike.github.io/yanaranop.github.io/" 
 												data-layout="button_count" 
@@ -691,11 +690,11 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 							<div class="project" style="background-image: url(images/img-5.jpg);">
 								<div class="desc">
 									<div class="con">
-										<h3><a href="work.html">Work 05</a></h3>
+										<h3><a href="#">Work 05</a></h3>
 										<span>Graphic, Logo</span>
 										<p class="icon">
 											<span><a target="_blank" 
-												href="https://www.facebook.com/sharer/sharer.php?u=https://mild2540mike.github.io/yanaranop.github.io/" 
+												href="http://www.facebook.com/sharer.php?s= 100&amp;p[title]=yanaranop.mike&amp;p[url]=https://mild2540mike.github.io/yanaranop.github.io/index.html&amp;p[images][0]=" 
 												class="fb-xfbml-parse-ignore" 
 												data-href="https://mild2540mike.github.io/yanaranop.github.io/" 
 												data-layout="button_count" 
@@ -722,11 +721,11 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 							<div class="project" style="background-image: url(images/img-6.jpg);">
 								<div class="desc">
 									<div class="con">
-										<h3><a href="work.html">Work 06</a></h3>
+										<h3><a href="#">Work 06</a></h3>
 										<span>Web Design</span>
 										<p class="icon">
 											<span><a target="_blank" 
-												href="https://www.facebook.com/sharer/sharer.php?u=https://mild2540mike.github.io/yanaranop.github.io/" 
+												href="http://www.facebook.com/sharer.php?s= 100&amp;p[title]=yanaranop.mike&amp;p[url]=https://mild2540mike.github.io/yanaranop.github.io/index.html&amp;p[images][0]=" 
 												class="fb-xfbml-parse-ignore" 
 												data-href="https://mild2540mike.github.io/yanaranop.github.io/" 
 												data-layout="button_count" 
@@ -735,13 +734,13 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 											   </a>
 									   </span>
 									   <span><a href="#"><i class="icon-eye"></i> 432</a></span>
-											<span><a id="demo5"><i class="icon-heart"></i> 214</a></span>
+											<span><a id="pus-heart"><i class="icon-heart"></i> 214</a></span>
 												<!-- fuction heart -->
 												<script>
-													document.getElementById("demo5").addEventListener("click", myFunction);
+													document.getElementById("pus-heart").addEventListener("click", myFunction);
 
 													function myFunction() {
-													document.getElementById("demo5").innerHTML =  "<i class='icon-heart'>" + "</i>" + " 215";
+													document.getElementById("pus-heart").innerHTML =  "<i class='icon-heart'>" + "</i>" + " 215";
 														}
 												</script>
 										</p>
@@ -769,30 +768,30 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 					<div class="row" style="color:black;">
 						<div class="col-md-4 col-sm-6 animate-box" data-animate-effect="fadeInLeft">
 							<div class="blog-entry">
-								<a href="blog.html" class="blog-img"><img src="images/blog-1.jpg" class="img-responsive" alt="HTML5 Bootstrap Template by colorlib.com"></a>
+								<a href="#" class="blog-img"><img src="images/blog-1.jpg" class="img-responsive"> </a>
 								<div class="desc" style="margin-left: 5px">
 									<span><small>April 14, 2018 </small> | <small> Web Design </small> | <small> <i class="icon-bubble3"></i> 4</small></span>
-									<h3><a href="blog.html">Renovating National Gallery</a></h3>
+									<h3><a href="#">Renovating National Gallery</a></h3>
 									<p>Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
 								</div>
 							</div>
 						</div>
 						<div class="col-md-4 col-sm-6 animate-box" data-animate-effect="fadeInRight">
 							<div class="blog-entry">
-								<a href="blog.html" class="blog-img"><img src="images/blog-2.jpg" class="img-responsive" alt="HTML5 Bootstrap Template by colorlib.com"></a>
+								<a href="#" class="blog-img"><img src="images/blog-2.jpg" class="img-responsive"> </a>
 								<div class="desc" style="margin-left: 5px">
 									<span><small>April 14, 2018 </small> | <small> Web Design </small> | <small> <i class="icon-bubble3"></i> 4</small></span>
-									<h3><a href="blog.html">Wordpress for a Beginner</a></h3>
+									<h3><a href="#">Wordpress for a Beginner</a></h3>
 									<p>Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
 								</div>
 							</div>
 						</div>
 						<div class="col-md-4 col-sm-6 animate-box" data-animate-effect="fadeInLeft">
 							<div class="blog-entry">
-								<a href="blog.html" class="blog-img"><img src="images/blog-3.jpg" class="img-responsive" alt="HTML5 Bootstrap Template by colorlib.com"></a>
+								<a href="#" class="blog-img"><img src="images/blog-3.jpg" class="img-responsive"> </a>
 								<div class="desc" style="margin-left: 5px">
 									<span><small>April 14, 2018 </small> | <small> Inspiration </small> | <small> <i class="icon-bubble3"></i> 4</small></span>
-									<h3><a href="blog.html">Make website from scratch</a></h3>
+									<h3><a href="#">Make website from scratch</a></h3>
 									<p>Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
 								</div>
 							</div>
