--- a/index.html
+++ b/index.html
@@ -579,7 +579,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 													</a>
 											</span>
 											<span><a href="#"><i class="icon-eye"></i> 100</a></span>
-											<span><a id="demo"><i class="icon-heart"></i> 49</a></span>
+											<span><a style="cursor: pointer;" id="demo"><i class="icon-heart"></i> 49</a></span>
 												<!-- fuction heart -->
 												<script>
 													document.getElementById("demo").addEventListener("click", myFunction);
@@ -610,7 +610,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 											   </a>
 									   </span>
 									   <span><a href="#"><i class="icon-eye"></i> 63</a></span>
-									   <span><a id="demo1"><i class="icon-heart"></i> 35</a></span>
+									   <span><a style="cursor: pointer;" id="demo1"><i class="icon-heart"></i> 35</a></span>
 									   <!-- fuction heart -->
 									   <script>
 										   document.getElementById("demo1").addEventListener("click", myFunction);
@@ -641,7 +641,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 											   </a>
 									   </span>
 									   <span><a href="#"><i class="icon-eye"></i> 142</a></span>
-									   <span><a id="demo2"><i class="icon-heart"></i> 87</a></span>
+									   <span><a style="cursor: pointer;" id="demo2"><i class="icon-heart"></i> 87</a></span>
 									   <!-- fuction heart -->
 									   <script>
 										   document.getElementById("demo2").addEventListener("click", myFunction);
@@ -672,7 +672,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 											   </a>
 									   </span>
 									   <span><a href="#"><i class="icon-eye"></i> 203</a></span>
-											<span><a id="demo3"><i class="icon-heart"></i> 100</a></span>
+											<span><a style="cursor: pointer;" id="demo3"><i class="icon-heart"></i> 100</a></span>
 												<!-- fuction heart -->
 												<script>
 													document.getElementById("demo3").addEventListener("click", myFunction);
@@ -703,7 +703,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 											   </a>
 									   </span>
 									   <span><a href="#"><i class="icon-eye"></i> 88</a></span>
-											<span><a id="demo4"><i class="icon-heart"></i> 42</a></span>
+											<span><a style="cursor: pointer;" id="demo4"><i class="icon-heart"></i> 42</a></span>
 												<!-- fuction heart -->
 												<script>
 													document.getElementById("demo4").addEventListener("click", myFunction);
@@ -734,7 +734,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 											   </a>
 									   </span>
 									   <span><a href="#"><i class="icon-eye"></i> 432</a></span>
-											<span><a id="pus-heart"><i class="icon-heart"></i> 214</a></span>
+											<span><a style="cursor: pointer;" id="pus-heart"><i class="icon-heart"></i> 214</a></span>
 												<!-- fuction heart -->
 												<script>
 													document.getElementById("pus-heart").addEventListener("click", myFunction);
